Optimizing Graph approach further, storing number of words with the array to prevent extra lookup.